--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,11 @@ remote_theme: pmarsceill/just-the-docs
 ---
 layout: default
 title: bitpaint
+description: welcome to my website
 nav_order: 0
 ---
+
+
+aux_links:
+  "Follow me on Twitter":
+    - "https://twitter.com/BITPAINTCLUB"
