--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,9 @@ layout: default
 title: bitpaint
 description: welcome to my website
 nav_order: 0
+
+aux_links:
+  "Follow me on Twitter":
+    - "//twitter.com/BITPAINTCLUB"
+aux_links_new_tab: false
 ---
