--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ description: welcome to my website
 nav_order: 0
 ---
 aux_links:
-  "Follow me on Twitter":
+  "Twitter":
     - "//twitter.com/BITPAINTCLUB"
 aux_links_new_tab: true
