--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,12 @@
 remote_theme: pmarsceill/just-the-docs
 
-url: "https://bitpaint.github.io" # the base hostname & protocol for your site
-
+url: "https://bitpaint.github.io" 
 color_scheme: dark
----
+search_enabled: false
 
 title: bitpaint
 nav_order: 0
----
 
-
-# Aux links for the upper right navigation
-aux_links:
-  "test":
-    - "//github.com/pmarsceill/just-the-docs"
 
 
 
