--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 remote_theme: pmarsceill/just-the-docs
 
+
+
 url: "https://bitpaint.github.io" 
 color_scheme: dark
+.text-purple-000
 search_enabled: false
 
 title: bitpaint
