--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Bitpaint
 
 # Remote Setting
 baseurl: "/bitpaint.github.io"
-url: "https://bitpaint.github.io"
+url: "https://bitpaint.club"
 
 # Theme
 # theme: "just-the-docs"
