--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://bitpaint.club"
 
 # Theme
 # theme: "just-the-docs"
-remote_theme: pmarsceill/just-the-docs@v0.2.5
+remote_theme: pmarsceill/just-the-docs
 
 # Theme settings
 # Color scheme currently only supports "dark" or nil (default)
